# visual-events

./: .gitignore  README.md  pyproject.toml
common/schema/: protocol.md  val_data_manifest_v1.md
common/schema/dds/: camera_jpeg_contract.md  gaze_target_v1.idl  gaze_target_v1.md  head_state_v1.idl  head_state_v1.md
common/schema/dds/samples/: gaze_target_disabled.json  gaze_target_lost.json  gaze_target_stale.json  gaze_target_tracking.json
common/schema/samples/: semantic_event_person_waving.json  visual_state_tracking.json
configs/: pc-ga-server.toml
docs/: dds-stack-decision-record.md  development-test-plan.md  familiar-unknown-recognition-improvement-plan.md  ga-development-plan.md  identity-overlay-product-development-plan.md  local-embedding-backend-checklist.md  memory-demo-evidence-quality-development-plan.md  memory-teaching-evidence-tool-development-plan.md  memory-teaching-ga-development-plan.md  memory-teaching-ga-handoff.md  no-motion-sdk-audit.md  product-candidate-features.md  product-design.md  real-model-evidence-demo-development-plan.md  server-development-plan.md  server-handoff.md  v0.2-storefront-event-quality-plan.md  v0.3-visual-identity-scene-memory-plan.md  v0.4-natural-memory-identity-enhancement-plan.md  visual-evidence-tool-development-plan.md
docs/legacy/: development-test-plan.md  familiar-unknown-recognition-improvement-plan.md  ga-development-plan.md  local-embedding-backend-checklist.md  memory-teaching-evidence-tool-development-plan.md  memory-teaching-ga-development-plan.md  memory-teaching-ga-handoff.md  no-motion-sdk-audit.md  product-candidate-features.md  product-candidate-visual-memory-rag.md  product-design-v1-baseline.md  server-development-plan.md  server-handoff.md  v0.3-visual-identity-scene-memory-plan.md  v0.4-natural-memory-identity-enhancement-plan.md  visual-evidence-tool-development-plan.md
native/dds_bridge/: CMakeLists.txt
native/dds_bridge/include/visual_events/dds_bridge/: bridge_abi.hpp  bridge_contract.hpp  bridge_dds_types.hpp  pc_test_tools.hpp  runtime_loop.hpp  runtime_options.hpp  unitree_channel_runtime.hpp
native/dds_bridge/src/: abi_harness_main.cpp  bridge_abi.cpp  bridge_contract.cpp  bridge_dds_types.cpp  construction_harness_main.cpp  mapping_harness_main.cpp  pc_test_tools.cpp  probe_main.cpp  publish_test_dds_images_main.cpp  publish_test_head_state_main.cpp  runtime_loop.cpp  runtime_loop_harness_main.cpp  runtime_main.cpp  runtime_options.cpp  subscribe_test_gaze_targets_main.cpp  unitree_channel_runtime.cpp
src/visual_events_cli/: __init__.py  botified_output.py  config.py  frame_pump.py  main.py  runtime.py  runtime_factories.py  service_client.py  target_mapper.py
src/visual_events_cli/dds/: __init__.py  bridge_adapters.py  bridge_process.py  bridge_protocol.py  fake.py  protocols.py  qos.py  types.py
src/visual_events_server/: __init__.py  app.py  config.py  metrics.py  processor.py  protocol.py
src/visual_events_server/attention/: __init__.py  selector.py
src/visual_events_server/events/: __init__.py  engine.py
src/visual_events_server/inference/: __init__.py  base.py  factory.py  mock.py  ultralytics_pose.py
src/visual_events_server/memory/: __init__.py  api_contract.py  embedding.py  events.py  frame_cache.py  identity_overlay.py  retriever.py  service.py  store.py  target_resolver.py
src/visual_events_server/tracking/: __init__.py  byte_tracker.py
tests/: jpeg_fixtures.py
tests/contract/: test_cli_package_contract.py  test_server_cli_contract.py
tests/integration/: test_cli_bridge_runtime_fake_child.py  test_cli_bridge_runtime_mock_server.py  test_replay_tool.py  test_run_val_data_e2e.py  test_runtime_smoke.py  test_server_attention_fake.py  test_server_events_fake.py  test_server_inference_fake.py  test_server_memory_wiring.py  test_server_mock.py  test_server_tracking_fake.py
tests/unit/: test_attention.py  test_cli_botified_output.py  test_cli_bridge_adapters.py  test_cli_bridge_process.py  test_cli_bridge_protocol.py  test_cli_bridge_runtime_factories.py  test_cli_config.py  test_cli_dds_adapters.py  test_cli_entrypoint.py  test_cli_frame_pump.py  test_cli_local_e2e_manifest.py  test_cli_no_motion_boundary.py  test_cli_runtime.py  test_cli_runtime_runner.py  test_cli_service_client.py  test_cli_target_mapper.py  test_config_inference.py  test_dds_contracts.py  test_events.py  test_ga_plan_hardening.py  test_generate_memory_teaching_evidence.py  test_generate_visual_evidence.py  test_identity_overlay.py  test_inference_mapping.py  test_memory_embedding.py  test_memory_events.py  test_memory_frame_cache.py  test_memory_service.py  test_memory_store_retriever.py  test_memory_target_resolver.py  test_memory_teaching_ga_runner.py  test_metrics.py  test_mock_visual_state_server.py  test_native_dds_bridge_foundation.py  test_pc_dds_tool_wrappers.py  test_processor_concurrency.py  test_processor_memory_snapshot.py  test_processor_metrics.py  test_processor_scene_flags.py  test_protocol.py  (+6 more)
tools/: __init__.py  build_dds_bridge.py  cli_local_e2e_manifest.py  dds_pc_tools.py  generate_memory_teaching_evidence.py  generate_visual_evidence.py  memory_teaching_evidence.py  mock_visual_state_server.py  prepare_dds_codegen_toolchain.py  public_demo_output.py  publish_test_dds_images.py  publish_test_head_state.py  replay_val_data.py  run_cli_local_e2e.py  run_memory_demo.py  run_memory_e2e.py  run_memory_teaching_ga_e2e.py  run_runtime_smoke.py  run_val_data_e2e.py  run_visual_demo.py  runtime_provenance.py  subscribe_test_gaze_targets.py  visual_evidence_helpers.py  visualize_service_replay.py
