[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "visual-events-server"
version = "0.1.0"
description = "Visual events WebSocket inference server skeleton"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "websockets>=12",
]

[dependency-groups]
dev = [
  "httpx>=0.27",
  "pytest>=8",
  "pytest-asyncio>=0.23",
]

[project.scripts]
visual-events-server = "visual_events_server.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
asyncio_mode = "auto"
