[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "visual-events-server"
version = "0.1.0"
description = "Visual events WebSocket inference server skeleton"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "sqlite-vec>=0.1.6",
  "uvicorn[standard]>=0.30",
  "websockets>=12",
]

[project.optional-dependencies]
inference = [
  "ultralytics-opencv-headless>=8.3,<9",
  "torch==2.7.0; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "torchvision==0.22.0; sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[dependency-groups]
dev = [
  "httpx>=0.27",
  "pytest>=8",
  "pytest-asyncio>=0.23",
]

[project.scripts]
visual-events-server = "visual_events_server.app:main"
visual-events-cli = "visual_events_cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
asyncio_mode = "auto"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" }
torchvision = { index = "pytorch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" }
